# Icarus

./: .editorconfig  .gitattributes  .gitconfig  .gitignore  .travis.yml  Assembly-CSharp.csproj  CMakeLists.txt  FallingSand.h  Game.cpp  Game.h  README.md  docfx.json  index.html  index.json  main.cpp  manifest.json  sitemap.xml  toc.html  xrefmap.yml
Assets/: PlayerInput.cs  PlayerInput.inputactions
Documentation/: docfx.json  index.md  toc.yml
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
api/: Global.AsteroidTester.html  Global.AsteroidsGenerator.html  Global.CameraZoomController.html  Global.Damage.html  Global.FollowMouse.html  Global.GameManager.html  Global.GridTesting.html  Global.InputManager.html  Global.LineDmgTester.html  Global.MapGenerator.html  Global.MapTester.html  Global.MovementManager.html  Global.ObjectPool.html  Global.PlayerInput.IPlayerActions.html  Global.PlayerInput.IUIActions.html  Global.PlayerInput.PlayerActions.html  Global.PlayerInput.UIActions.html  Global.PlayerInput.html  Global.RasterUtil.html  Global.SceneLoader.html  Global.ShipData.html  Global.ShipDesigner.html  Global.ShipManager.html  Global.TabGroup.html  Global.TileData.html  Global.TileGrid.html  Global.WeaponFx.html  Global.WeaponsManager.html  Global.html  TileSystem.BasePart.html  TileSystem.Direction.html  TileSystem.Directions.html  TileSystem.EnginePart.html  TileSystem.FunctionalTileData.html  TileSystem.Notify.html  TileSystem.StructuralTileData.html  TileSystem.TileInfo.html  TileSystem.TileInstanceData.html  (+23 more)
(+135 files in other folders)
